Fix navbar text overflow

--- a/css/comicstyle.css
+++ b/css/comicstyle.css
@@ -365,7 +365,7 @@ a:hover {
     }
 }
 
-@media only screen and (max-width: 460px) {
+@media only screen and (max-width: 470px) {
     .navbar-brand {
         font-size: 12px;
     }
